--- a/config.json
+++ b/config.json
@@ -150,7 +150,7 @@
       "action": "output",
       "args": {
         "outputName": "geoip.dat",
-        "wantedList": ["apple", "microsoft", "cn", "developer", "direct", "google", "googlecn", "httpdns", "lan", "streaming", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube"]
+        "wantedList": ["apple", "microsoft", "cn", "developer", "direct", "google", "googlecn", "httpdns", "lan", "streaming", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube", "steamcn"]
       }
     },
     {
@@ -158,7 +158,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["apple", "microsoft", "cn", "developer", "direct", "google", "googlecn", "httpdns", "lan", "streaming", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube"]
+        "wantedList": ["apple", "microsoft", "cn", "developer", "direct", "google", "googlecn", "httpdns", "lan", "streaming", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube", "steamcn"]
       }
     },
     {
