--- a/config.json
+++ b/config.json
@@ -27,8 +27,8 @@
       "type": "text",
       "action": "add",
       "args": {
-        "name": "lan",
-        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/lan.txt"
+        "name": "private",
+        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/private.txt"
       }
     },
     {
@@ -150,7 +150,7 @@
       "action": "output",
       "args": {
         "outputName": "geoip.dat",
-        "wantedList": ["apple", "microsoft", "cn", "developer", "direct", "google", "googlecn", "httpdns", "lan", "streaming", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube", "steamcn"]
+        "wantedList": ["apple", "microsoft", "cn", "developer", "direct", "google", "googlecn", "httpdns", "private", "streaming", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube", "steamcn"]
       }
     },
     {
@@ -158,7 +158,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["apple", "microsoft", "cn", "developer", "direct", "google", "googlecn", "httpdns", "lan", "streaming", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube", "steamcn"]
+        "wantedList": ["apple", "microsoft", "cn", "developer", "direct", "google", "googlecn", "httpdns", "private", "streaming", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube", "steamcn"]
       }
     },
     {
