--- a/config.json
+++ b/config.json
@@ -139,6 +139,14 @@
       "type": "text",
       "action": "add",
       "args": {
+        "name": "discord",
+        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/discord.txt"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
         "name": "telegram",
         "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/telegram.txt"
       }
@@ -150,7 +158,7 @@
       "action": "output",
       "args": {
         "outputName": "geoip.dat",
-        "wantedList": ["apple", "microsoft", "cn", "developer", "direct", "google", "googlecn", "httpdns", "private", "streaming", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube", "steamcn"]
+        "wantedList": ["apple", "microsoft", "cn", "dicord", "developer", "direct", "google", "googlecn", "httpdns", "private", "streaming", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube", "steamcn"]
       }
     },
     {
@@ -158,7 +166,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["apple", "microsoft", "cn", "developer", "direct", "google", "googlecn", "httpdns", "private", "streaming", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube", "steamcn"]
+        "wantedList": ["apple", "microsoft", "cn", "dicord", "developer", "direct", "google", "googlecn", "httpdns", "private", "streaming", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube", "steamcn"]
       }
     },
     {
