--- a/config.json
+++ b/config.json
@@ -19,6 +19,14 @@
       "type": "text",
       "action": "add",
       "args": {
+        "name": "akamai",
+        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/akamai.txt"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
         "name": "apple",
         "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/apple.txt"
       }
@@ -158,7 +166,7 @@
       "action": "output",
       "args": {
         "outputName": "geoip.dat",
-        "wantedList": ["apple", "microsoft", "cn", "dicord", "developer", "direct", "google", "googlecn", "httpdns", "private", "streaming", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube", "steamcn"]
+        "wantedList": ["apple", "akamai", "microsoft", "cn", "dicord", "developer", "direct", "google", "googlecn", "httpdns", "private", "streaming", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube", "steamcn"]
       }
     },
     {
@@ -166,7 +174,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["apple", "microsoft", "cn", "dicord", "developer", "direct", "google", "googlecn", "httpdns", "private", "streaming", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube", "steamcn"]
+        "wantedList": ["apple", "akamai", "microsoft", "cn", "dicord", "developer", "direct", "google", "googlecn", "httpdns", "private", "streaming", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube", "steamcn"]
       }
     },
     {
