--- a/config.json
+++ b/config.json
@@ -83,6 +83,14 @@
       "type": "text",
       "action": "add",
       "args": {
+        "name": "openai",
+        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/openai.txt"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
         "name": "direct",
         "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/direct.txt"
       }
@@ -166,7 +174,7 @@
       "action": "output",
       "args": {
         "outputName": "geoip.dat",
-        "wantedList": ["apple", "akamai", "microsoft", "cn", "discord", "developer", "direct", "google", "googlecn", "httpdns", "private", "streaming", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube", "steamcn"]
+        "wantedList": ["apple", "akamai", "microsoft", "cn", "discord", "developer", "direct", "google", "googlecn", "httpdns", "openai", "private", "streaming", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube", "steamcn"]
       }
     },
     {
@@ -174,7 +182,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["apple", "akamai", "microsoft", "cn", "discord", "developer", "direct", "google", "googlecn", "httpdns", "private", "streaming", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube", "steamcn"]
+        "wantedList": ["apple", "akamai", "microsoft", "cn", "discord", "developer", "direct", "google", "googlecn", "httpdns", "openai", "private", "streaming", "ntp", "reject", "speedtest", "telegram", "tracker", "youtube", "steamcn"]
       }
     },
     {
