--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,14 @@ jobs:
             $(go env GOPATH)/bin/mmdbverify -file ${name}
           done
 
+      - name: Build geoip.db file
+        env:
+          NO_SKIP: true
+        run: |
+          go install -trimpath -ldflags="-s -w -buildid=" github.com/metacubex/geo/cmd/geo@master
+          geo convert ip -i v2ray -o sing -f geoip.db ./output/dat/geoip.dat
+          sha256sum geoip.db > geosite.db.sha256sum
+
       - name: Generate sha256 checksum for dat files
         run: |
           cd ./output/dat || exit 1
@@ -78,7 +86,7 @@ jobs:
       - name: Move files to publish directory
         run: |
           mkdir -p publish
-          mv ./output/dat/*.dat ./output/dat/*.sha256sum ./output/maxmind/*.mmdb ./output/maxmind/*.sha256sum ./publish/
+          mv ./output/dat/*.dat ./output/dat/*.sha256sum ./output/maxmind/*.mmdb ./output/maxmind/*.sha256sum ./geoip.db ./geoip.db.sha256sum ./publish/
           cp -fpPR ./output/text ./publish
 
       - name: Git push assets to "release" branch
