--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,12 +61,14 @@ jobs:
             $(go env GOPATH)/bin/mmdbverify -file ${name}
           done
 
-      - name: Build geoip.db file
+      - name: Build geoip.metadb and geoip.db file
         env:
           NO_SKIP: true
         run: |
           go install -trimpath -ldflags="-s -w -buildid=" github.com/metacubex/geo/cmd/geo@master
+          geo convert ip -i v2ray -o meta -f geoip.metadb ./output/dat/geoip.dat
           geo convert ip -i v2ray -o sing -f geoip.db ./output/dat/geoip.dat
+          sha256sum geoip.metadb > ./geoip.metadb.sha256sum
           sha256sum geoip.db > ./geoip.db.sha256sum
 
       - name: Generate sha256 checksum for dat files
@@ -86,7 +88,7 @@ jobs:
       - name: Move files to publish directory
         run: |
           mkdir -p publish
-          mv ./output/dat/*.dat ./output/dat/*.sha256sum ./output/maxmind/*.mmdb ./output/maxmind/*.sha256sum ./geoip.db ./geoip.db.sha256sum ./publish/
+          mv ./output/dat/*.dat ./output/dat/*.sha256sum ./output/maxmind/*.mmdb ./output/maxmind/*.sha256sum ./geoip.db ./geoip.db.sha256sum ./geoip.metadb ./geoip.metadb.sha256sum ./publish/
           cp -fpPR ./output/text ./publish
 
       - name: Git push assets to "release" branch
