--- a/config.json
+++ b/config.json
@@ -67,14 +67,6 @@
       "type": "text",
       "action": "add",
       "args": {
-        "name": "direct",
-        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/direct.txt"
-      }
-    },
-    {
-      "type": "text",
-      "action": "add",
-      "args": {
         "name": "reject",
         "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/reject.txt"
       }
@@ -158,7 +150,7 @@
       "action": "output",
       "args": {
         "outputName": "geoip.dat",
-        "wantedList": ["apple", "akamai", "microsoft", "cn", "direct", "google", "googlecn", "httpdns", "openai", "private", "streaming", "twitter", "reject", "speedtest", "tencent", "telegram", "tracker", "steamcn"]
+        "wantedList": ["apple", "akamai", "microsoft", "cn", "google", "googlecn", "httpdns", "openai", "private", "streaming", "twitter", "reject", "speedtest", "tencent", "telegram", "tracker", "steamcn"]
       }
     },
     {
@@ -166,7 +158,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["apple", "akamai", "microsoft", "cn", "direct", "google", "googlecn", "httpdns", "openai", "private", "streaming", "twitter", "reject", "speedtest", "tencent", "telegram", "tracker", "steamcn"]
+        "wantedList": ["apple", "akamai", "microsoft", "cn", "google", "googlecn", "httpdns", "openai", "private", "streaming", "twitter", "reject", "speedtest", "tencent", "telegram", "tracker", "steamcn"]
       }
     },
     {
