--- a/config.json
+++ b/config.json
@@ -147,6 +147,14 @@
       "type": "text",
       "action": "add",
       "args": {
+        "name": "tiktok",
+        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/tiktok.txt"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
         "name": "telegram",
         "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/telegram.txt"
       }
@@ -158,7 +166,7 @@
       "action": "output",
       "args": {
         "outputName": "geoip.dat",
-        "wantedList": ["apple", "akamai", "microsoft", "cn", "developer", "google", "googlecn", "httpdns", "openai", "private", "streaming", "twitter", "reject", "speedtest", "tencent", "telegram", "tracker", "steamcn"]
+        "wantedList": ["apple", "akamai", "microsoft", "cn", "developer", "google", "googlecn", "httpdns", "openai", "private", "reject", "speedtest", "steamcn", "streaming", "tiktok", "twitter", "tencent", "telegram", "tracker"]
       }
     },
     {
@@ -166,7 +174,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["apple", "akamai", "microsoft", "cn", "developer", "google", "googlecn", "httpdns", "openai", "private", "streaming", "twitter", "reject", "speedtest", "tencent", "telegram", "tracker", "steamcn"]
+        "wantedList": ["apple", "akamai", "microsoft", "cn", "developer", "google", "googlecn", "httpdns", "openai", "private", "reject", "speedtest", "steamcn", "streaming", "tiktok", "twitter", "tencent", "telegram", "tracker"]
       }
     },
     {
