--- a/config.json
+++ b/config.json
@@ -147,8 +147,8 @@
       "type": "text",
       "action": "add",
       "args": {
-        "name": "tencent",
-        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/tencent.txt"
+        "name": "ccc",
+        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/ccc.txt"
       }
     },
     {
@@ -182,7 +182,7 @@
       "action": "output",
       "args": {
         "outputName": "geoip.dat",
-        "wantedList": ["apple", "akamai", "microsoft", "cn", "developer", "fastly", "google", "googlecn", "httpdns", "meta", "openai", "private", "reject", "speedtest", "steamcn", "streaming", "tiktok", "twitter", "tencent", "telegram", "tracker"]
+        "wantedList": ["apple", "akamai", "microsoft", "cn", "developer", "fastly", "google", "googlecn", "httpdns", "meta", "openai", "private", "reject", "speedtest", "steamcn", "streaming", "tiktok", "twitter", "ccc", "telegram", "tracker"]
       }
     },
     {
@@ -190,7 +190,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["apple", "akamai", "microsoft", "cn", "developer", "fastly", "google", "googlecn", "httpdns", "meta", "openai", "private", "reject", "speedtest", "steamcn", "streaming", "tiktok", "twitter", "tencent", "telegram", "tracker"]
+        "wantedList": ["apple", "akamai", "microsoft", "cn", "developer", "fastly", "google", "googlecn", "httpdns", "meta", "openai", "private", "reject", "speedtest", "steamcn", "streaming", "tiktok", "twitter", "ccc", "telegram", "tracker"]
       }
     },
     {
