--- a/config.json
+++ b/config.json
@@ -179,6 +179,14 @@
       "type": "text",
       "action": "add",
       "args": {
+        "name": "cert",
+        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/cert.txt"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
         "name": "meta",
         "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/facebook.txt"
       }
@@ -190,7 +198,7 @@
       "action": "output",
       "args": {
         "outputName": "geoip.dat",
-        "wantedList": ["apple", "akamai", "microsoft", "cn", "developer", "fastly", "google", "googlecn", "httpdns", "meta", "ai", "private", "reddit", "reject", "speedtest", "steamcn", "streaming", "tiktok", "twitter", "ccc", "telegram", "tracker"]
+        "wantedList": ["apple", "akamai", "microsoft", "cert", "cn", "developer", "fastly", "google", "googlecn", "httpdns", "meta", "ai", "private", "reddit", "reject", "speedtest", "steamcn", "streaming", "tiktok", "twitter", "ccc", "telegram", "tracker"]
       }
     },
     {
@@ -198,7 +206,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["apple", "akamai", "microsoft", "cn", "developer", "fastly", "google", "googlecn", "httpdns", "meta", "ai", "private", "reddit", "reject", "speedtest", "steamcn", "streaming", "tiktok", "twitter", "ccc", "telegram", "tracker"]
+        "wantedList": ["apple", "akamai", "microsoft", "cert", "cn", "developer", "fastly", "google", "googlecn", "httpdns", "meta", "ai", "private", "reddit", "reject", "speedtest", "steamcn", "streaming", "tiktok", "twitter", "ccc", "telegram", "tracker"]
       }
     },
     {
