--- a/config.json
+++ b/config.json
@@ -195,6 +195,14 @@
       "type": "text",
       "action": "add",
       "args": {
+        "name": "claude",
+        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/claude.txt"
+      }
+    },
+    {
+      "type": "text",
+      "action": "add",
+      "args": {
         "name": "meta",
         "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/facebook.txt"
       }
@@ -206,7 +214,7 @@
       "action": "output",
       "args": {
         "outputName": "geoip.dat",
-        "wantedList": ["ai", "apple", "akamai", "ccc", "cert", "cn", "developer", "fastly", "google", "googlecn", "httpdns", "meta", "microsoft", "private", "reddit", "reject", "speedtest", "steamcn", "streaming", "talkatone", "tiktok", "twitter", "telegram", "tracker"]
+        "wantedList": ["ai", "apple", "akamai", "ccc", "cert", "claude", "cn", "developer", "fastly", "google", "googlecn", "httpdns", "meta", "microsoft", "private", "reddit", "reject", "speedtest", "steamcn", "streaming", "talkatone", "tiktok", "twitter", "telegram", "tracker"]
       }
     },
     {
@@ -214,7 +222,7 @@
       "action": "output",
       "args": {
         "outputName": "Country.mmdb",
-        "wantedList": ["ai", "apple", "akamai", "ccc", "cert", "cn", "developer", "fastly", "google", "googlecn", "httpdns", "meta", "microsoft", "private", "reddit", "reject", "speedtest", "steamcn", "streaming", "talkatone", "tiktok", "twitter", "telegram", "tracker"]
+        "wantedList": ["ai", "apple", "akamai", "ccc", "cert", "claude", "cn", "developer", "fastly", "google", "googlecn", "httpdns", "meta", "microsoft", "private", "reddit", "reject", "speedtest", "steamcn", "streaming", "talkatone", "tiktok", "twitter", "telegram", "tracker"]
       }
     },
     {
