--- a/config.json
+++ b/config.json
@@ -91,8 +91,8 @@
       "type": "text",
       "action": "add",
       "args": {
-        "name": "developer",
-        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/developer.txt"
+        "name": "github",
+        "uri": "https://raw.githubusercontent.com/dl123100/clash-geoip/master/IPs/github.txt"
       }
     },
     {
