--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,6 +98,14 @@ jobs:
           mkdir -p mrs
           cd convert
           go run ./ geoip -f ../output/dat/geoip.dat -o ../mrs
+
+      - name: Build srs file
+        env:
+          NO_SKIP: true
+        run: |
+          mkdir -p srs
+          cd convert
+          go run ./ geoip -f ../community/geoip.dat -o ../srs -t sing-box
           
       - name: Move files to publish directory
         run: |
@@ -128,6 +136,18 @@ jobs:
           git commit -m "${{ env.RELEASE_NAME }}"
           git remote add origin "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
           git push -f -u origin mrs
+
+      - name: Git push assets to "srs" branch
+        run: |
+          cd srs || exit 1
+          git init
+          git config --local user.name "github-actions[bot]"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git checkout -b srs
+          git add .
+          git commit -m "${{ env.RELEASE_NAME }}"
+          git remote add origin "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
+          git push -f -u origin srs
 
       - name: Remove some files to avoid publishing to GitHub release
         run: rm -rf ./publish/*.{gz,zip} ./publish/text
